--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,8 @@
-@import "./cartes";
+@import "cartes";
+@import "mixins";
 
-$primary-color: rgba(47, 166, 0, 0.679);
-$secondary-color: lighten($primary-color, 50%);
+$primary-color: #279527;
+$secondary-color: lighten($primary-color, 42%);
 
 html {
   height: 100%;
@@ -12,10 +13,7 @@ html {
 
     #app {
       height: 100%;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
+      @include flex(row, center, center);
     }
 
     .central-zone {
