--- a/src/style.scss
+++ b/src/style.scss
@@ -17,6 +17,7 @@ html {
     }
 
     .central-zone {
+      position: relative;
       width: 800px;
       height: 600px;
       border: white 1px solid;
