--- a/src/_cartes.scss
+++ b/src/_cartes.scss
@@ -3,70 +3,26 @@
 $height: 125px;
 $width: 80px;
 $random-number: math.random() * 360deg;
-$card-rotation: 0deg;
+$card-rotation: -50deg;
+$margin-left-card: 50px;
+$random-distance: math.random() * 1px;
+$random-distance-2: math.random() * 30px;
 
-// @for $i from 2 through 6 {
-//     #card-#{$i} {
-//       margin-top: 40px * $i;
-//     }
-//   }
-
-@for $i from 1 through 3 {
-    #card-#{$i} {
-        rotate: $card-rotation - 25deg * $i;
-        
-        
-    }
-}
-
-@for $i from 4 through 6 {
-    #card-#{$i} {
-        rotate: $card-rotation + 25deg * $i;
-        
-    }
-}
 
 .central-zone__card {
     position: absolute;
     margin-top: 50px;
-    margin-left: 50px;
-    //rotate: $random-number;
-    height: $height;
-    width: $width;
-    background-color: white;
-    border-radius: 1em;
-    border: 0.3em double black ;
+    margin-left: $margin-left-card;
+    rotate: $card-rotation;
+    @include card-creator-face();
 
-    .card__top{
-        @include flex(column, start, start);
-
-        
-        .top__left {
-            margin-left: 0.2em;
-            text-align: center;
-        }
-    }
-
-    .center__form {
-        text-align: center;
-        font-size: 2.5em;
-
-    }
-
-    .card__bottom{
-        @include flex(column, start, end);
-
-        .bottom__right{
-            text-align: center;
-            margin-right: 0.2em;
-            .right__form {
-                rotate: 180deg;
-            }
-            .right__number{
-                rotate: 180deg;
-            }
-        }
-    }
 }
 
+.defausse__card {
+    @include card-creator-face();
+}
+
+.opponent__card {
+    @include card-creator();
+}
 
