--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,11 @@
+@use 'sass:math';
 @import "cartes";
 @import "mixins";
 
 $primary-color: #279527;
 $secondary-color: lighten($primary-color, 42%);
+
+
 
 html {
   height: 100%;
@@ -14,15 +17,37 @@ html {
     #app {
       height: 100%;
       @include flex(row, center, center);
-    }
 
-    .central-zone {
-      position: relative;
-      width: 800px;
-      height: 600px;
-      border: white 1px solid;
-      border-radius: 1em;
-      background-color: $secondary-color;
+
+      .central-zone {
+        position: relative;
+        width: 800px;
+        height: 600px;
+        border: white 1px solid;
+        border-radius: 1em;
+        background-color: $secondary-color;
+        @include fan-rotate-cards();
+
+          .central-zone__defausse {
+            position: absolute;
+            margin-left: 200px;
+            margin-right: 200px;
+            margin-top: 100px;
+            width: 400px;
+            @include random-card-position();
+          }
+
+          .central-zone__opponent {
+            position: absolute;
+            @include flex(row, center, start);
+            rotate: -90deg;
+            margin-top: 230px;
+            margin-left: 460px;
+            // @include flex(column, start, end);
+            // @include rotation-90();
+            // @include opponent-pile();
+          }
+      }
     }
   }
 }
